--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
         <span ng-class="word.cls" ng-repeat="word in viewWords">{{ word.word }}  </span>
       </p>
     </div>
+<!--  text  --><!--  text  --><!--  text  -->
+    <!--  text  -->
+    <!--  text  -->
+    <!--  text  -->
+    <!--  text  -->
+    <!--  text  -->
+    <!--  text  -->
 
 
 
