--- a/index.html
+++ b/index.html
@@ -6,24 +6,18 @@
 </head>
 <body>
     <nav>
+    <div id="nav-image"></div>
       <button ng-click="addPlainWords()">Add Word</button>
       <button ng-click="addWords()">Add Word with decoration</button>
       <button ng-click="addPlainPhrase()">Add Phrase</button>
       <button ng-click="addPhrase()">Add Phrase with decoration</button>
     </nav>
 
-    <div>
+    <div id="word-area">
       <p>
         <span ng-class="word.cls" ng-repeat="word in viewWords">{{ word.word }}  </span>
       </p>
     </div>
-<!--  text  --><!--  text  --><!--  text  -->
-    <!--  text  -->
-    <!--  text  -->
-    <!--  text  -->
-    <!--  text  -->
-    <!--  text  -->
-    <!--  text  -->
 
 
 
