--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
     <nav>
     <div id="nav-image"></div>
+    <div id="toddler-title"></div>    
       <button ng-click="addPlainWords()">Add Word</button>
       <button ng-click="addWords()">Add Word with decoration</button>
       <button ng-click="addPlainPhrase()">Add Phrase</button>
